src/snapshots/dunspars__cli__tests__run_move.snap
---
source: src/cli.rs
description: move brick-break --game sun-moon
---
brick-break
fighting physical
power: 75   accuracy: 100  pp: 15 
Destroys any light screen or reflect on the target's side of the field, then inflicts regular damage.
